Can anyone fix the company dashboard errors?